--- a/htm/focus3.html
+++ b/htm/focus3.html
@@ -47,7 +47,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <h3 id="模型與數學原理"><a href="#模型與數學原理">模型與數學原理</a></h3>
 <p>以下是本文程式所採用的一個「多層感知器」模型，其中包含「輸入層、隱藏層與輸出層」，這種多層感知器與上一篇「單層感知器」的一個明顯不同點，在於擁有一個隱藏層，因此其能力增強了很多。</p>
 <div class="figure">
-<img src="../img/mlp.jpg" alt="圖、多層感知器模型 (本圖含一個隱藏層)" /><p class="caption">圖、多層感知器模型 (本圖含一個隱藏層)</p>
+<img src="../img/MLP.jpg" alt="圖、多層感知器模型 (本圖含一個隱藏層)" /><p class="caption">圖、多層感知器模型 (本圖含一個隱藏層)</p>
 </div>
 <p>既然反傳遞演算法是一種梯度下降法，那麼我們只要能計算出梯度的方向，就能讓「多層感知器」的權重朝著能量下降最快的方向前進。</p>
 <p>但是、梯度要怎麼計算呢？先讓我們來看一張多變數的能量曲線圖。</p>
